[package]
name = "jeopardy_csr"
version = "0.1.0"
edition = "2021"
authors = ["ArsenicPurple <56276124+ArsenicPurple@users.noreply.github.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7" }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3", features = ["FileList", "File"] }
wasm-bindgen = "0.2"

# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"


[dev-dependencies]
rand = "0.9.0"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window", "FileList", "File"] }


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
